# DNS

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: Message.h  Query.h  component.hpp  logger.hpp  message.h  message.hpp  query.hpp  resolver.hpp  response.hpp  server.h  server.hpp  types.hpp  util.hpp
libs/DnsLib/: CMakeLists.txt
libs/DnsLib/include/: Types.h  Util.h
libs/DnsLib/src/: Message.cpp  server.cpp
libs/DnsLib/test/: CMakeLists.txt  message_tests.cpp
src/: Message.cpp  component.cpp  logger.cpp  main.cpp  message.cpp  query.cpp  resolver.cpp  response.cpp  server.cpp
template/: dns.conf
test/: MessageTests.cpp  message_tests.cpp  query_tests.cpp
